[gd_scene load_steps=9 format=3 uid="uid://gtrphdsby76q"]

[ext_resource type="Texture2D" uid="uid://deahqm81a21k2" path="res://Assets/Misc/Planeta.png" id="1_3k1ur"]
[ext_resource type="Script" uid="uid://bnfike8dmycom" path="res://Scripts/MenuPrincipal.gd" id="1_vtrnu"]
[ext_resource type="Texture2D" uid="uid://bnlani5kr1hyb" path="res://Assets/Misc/buho.png" id="2_bt1tr"]
[ext_resource type="Texture2D" uid="uid://ctmydbo0736gc" path="res://icon.png" id="3_bt1tr"]
[ext_resource type="Texture2D" uid="uid://b7j6kxmkhhngf" path="res://Assets/Misc/nubes.png" id="3_l10t8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l10t8"]
bg_color = Color(0.9019608, 0.8627451, 0.5882353, 1)
corner_radius_bottom_left = 50
expand_margin_left = 25.0
expand_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kh3b"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8kh3b"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vtrnu")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 30.0
offset_right = 656.0
offset_bottom = 224.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_bt1tr")

[node name="Nubes" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 342.0
offset_top = 682.0
offset_right = 1392.0
offset_bottom = 1032.0
texture = ExtResource("3_l10t8")

[node name="Planeta" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -267.0
offset_top = 565.0
offset_right = 2233.0
offset_bottom = 3065.0
rotation = -0.36651915
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_3k1ur")

[node name="Buho" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 996.0
offset_top = 331.00006
offset_right = 2020.0
offset_bottom = 1355.0
rotation = -0.20071286
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(512, 512)
texture = ExtResource("2_bt1tr")
flip_h = true

[node name="Descripcion" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -902.0
offset_bottom = 114.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.19607843)
theme_override_constants/line_spacing = 10
theme_override_constants/paragraph_spacing = 5
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_l10t8")
text = "Explora Continentes, descubre países y datos curiosos.
¡Demuestra qué tan bien conoces el mundo..bandera por bandera!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Opciones" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -312.0
offset_right = 209.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NombreLabel" type="Label" parent="Opciones"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Nombre"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NombreLineEdit" type="LineEdit" parent="Opciones"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.2885176, 0.2885182, 0.2885177, 0.6)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_8kh3b")
placeholder_text = "Ingresa tu nombre..."
alignment = 1

[node name="BotonJugar" type="Button" parent="Opciones"]
layout_mode = 2
size_flags_vertical = 10
text = "Jugar"

[node name="BotonConfiguraciones" type="Button" parent="Opciones"]
layout_mode = 2
size_flags_vertical = 6
text = "Configuraciones"

[node name="BotonComoJugar" type="Button" parent="Opciones"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_8kh3b")
text = "¿Cómo Jugar?"
